# imgio

./: .gitignore  meson.build  meson_options.txt
include/: stb_image.h
include/imgio/: allocation.hpp  config.hpp.in  f16.hpp  file.hpp  format.hpp  fwd.hpp  image.hpp  meson.build  stream.hpp
src/: format_utils.c  format_utils.h  tinyexr.hpp
src/imgio/: exr.cpp  f16.cpp  file.cpp  format.cpp  gl.hpp  image.cpp  ktx.cpp  ktx2.cpp  png.cpp  stream.cpp  turbojpeg.cpp  webp.cpp
subprojects/: dlg.wrap
